added support for get parameters, and calling methods from HtmlView.toHtml()